<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ProfileActivity">

        <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">
            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
        </android.support.design.widget.AppBarLayout>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:id="@+id/view" android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.464" app:layout_constraintStart_toStartOf="parent"
                android:background="@android:color/black" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/track"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                android:layout_marginTop="24dp" android:textSize="@dimen/text_size" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" android:textAlignment="viewStart"
                android:layout_marginStart="16dp" android:fontFamily="@font/nova_flat"/>
        <TextView
                android:text="@string/country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:textSize="@dimen/text_size" app:layout_constraintStart_toStartOf="@+id/textView"
                android:textAlignment="viewStart" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:fontFamily="@font/nova_flat"/>
        <TextView
                android:text="@string/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                android:textSize="@dimen/text_size" android:textAlignment="viewStart"
                android:fontFamily="@font/nova_flat"/>
        <TextView
                android:text="@string/phone_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView8" android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6" android:textAlignment="viewStart"
                android:fontFamily="@font/nova_flat"/>
        <TextView
                android:text="@string/slack_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView10" android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView8"
                android:textAlignment="viewStart" android:layout_marginBottom="60dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                android:fontFamily="@font/nova_flat"/>
        <TextView
                android:text="@string/full_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                app:layout_constraintBottom_toTopOf="@+id/view" android:layout_marginBottom="16dp"
                android:textAlignment="center" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent" android:textSize="24sp"
                android:fontFamily="@font/nova_flat"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:srcCompat="@mipmap/my_img"
                android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textView12" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                android:contentDescription="@string/image_description"/>


    </android.support.constraint.ConstraintLayout>


</ScrollView>
