<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    </android.support.design.widget.AppBarLayout>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.137"
            android:textSize="30sp" android:fontFamily="@font/nova_flat" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:id="@+id/textView2"
            android:textAlignment="center" android:textStyle="bold"/>
    <Button
            android:text="@string/about_alc_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_shape"
            android:textSize="@dimen/text_size"
            android:paddingRight="5dp"
            android:padding="5dp"
            android:id="@+id/about_alc_btn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:onClick="loadAndelaALCPage" android:fontFamily="@font/nova_flat"/>
    <Button
            android:text="@string/my_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_shape"
            android:textSize="@dimen/text_size"
            android:paddingRight="5dp"
            android:padding="5dp"
            android:id="@+id/profile_btn" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/about_alc_btn" android:onClick="goToProfilePage"
            android:fontFamily="@font/nova_flat"/>

</android.support.constraint.ConstraintLayout>